Fix: Courses Program Interface
- Fix Layout issues and make font sizing more appropriate
- Remove visibility of upper emnu when editing a course
-  Length of course now properly displayed as km everywhere

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -232,12 +232,14 @@ main
         margin-top:0
         margin-bottom:10px
     h3
-        margin:10px 0
+        margin:7px 0
         font-weight: 300
-        font-size: 30px
+        font-size: 26px
     p
         margin:7px 0
-
+    #courses-add
+        margin-top:0
+        padding-bottom:15px
 
 #about
     overflow-y:auto
